force-app/main/default/objects/Channel_Partner__c/fields/Alternate_number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_number__c</fullName>
    <label>Alternate number</label>
    <type>Phone</type>
</CustomField>