force-app/main/default/objects/Channel_Partner__c/validationRules/Adhar_12_Digit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Adhar_12_Digit_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Aadhaar_No__c)),
    OR(
        LEN(Aadhaar_No__c) &lt;&gt; 12,
        NOT(REGEX(Aadhaar_No__c, &quot;^[0-9]+$&quot;))
    )
)</errorConditionFormula>
    <errorDisplayField>Aadhaar_No__c</errorDisplayField>
    <errorMessage>Aadhaar number must be 12 digits</errorMessage>
</ValidationRule>