force-app/main/default/objects/Channel_Partner__c/validationRules/PAN_No_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_No_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PAN__c)),
    NOT(REGEX(PAN__c, &quot;^[A-Z]{5}[0-9]{4}[A-Z]{1}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>PAN__c</errorDisplayField>
    <errorMessage>PAN must be in the format AAAAA1234A (5 letters, 4 digits, 1 letter).</errorMessage>
</ValidationRule>