force-app/main/default/objects/Channel_Partner__c/validationRules/Ten_Digit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Ten_Digit_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Mobile_Number__c)),
    OR(
        LEN(Mobile_Number__c) &lt;&gt; 10,
        NOT(REGEX(Mobile_Number__c, &quot;^[0-9]+$&quot;))
    )
)</errorConditionFormula>
    <errorDisplayField>Mobile_Number__c</errorDisplayField>
    <errorMessage>Mobile number must be 10 digits</errorMessage>
</ValidationRule>