force-app/main/default/objects/Channel_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type_of_CP__c</columns>
    <columns>ContactPerson__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Email__c</columns>
    <columns>Aadhaar_No__c</columns>
    <columns>Designation__c</columns>
    <columns>Alternate_number__c</columns>
    <columns>PAN__c</columns>
    <columns>GST__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>